로그 수정